--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,23 @@
     font-size:15px;
 
 }
+.top-alert {
+  height: 5vh;
+  background-color: rgb(238, 26, 26);
+  color: white;
+  display: flex;
+  text-align: start;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+  line-height: 10px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+}
+
 .nani-form{
   border: 1px solid #D3D3D3;
   padding: 5px;
@@ -1326,8 +1343,8 @@ button:hover {
 }
 .white-box{
   background-color: #FFFFFF;
-  width: 98%;
-  height: 95%;
+  width: 100%;
+  height: 100%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   padding: 10px 20px;
   overflow-y: auto;
@@ -1443,55 +1460,5 @@ button:hover {
   font-weight: bold;
 }
 
-/* New login form design */
 
-/* Container for the curtains and login form */
-.curtains-container {
-  position: relative;
-  width: 100%;
-  height: 95vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-}
-
-
-
-/* The curtains (left and right) */
-.curtain {
-  position: absolute;
-  top: 0;
-  width: 50%;
-  height: 100%;
-  background: linear-gradient(135deg, #bca27c, #8b5a2b);
-  background-image: url('https://www.transparenttextures.com/patterns/wood-pattern.png');
-  background-size: cover;
-  background-blend-mode: multiply;
-  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.4),
-              0 0 20px rgba(0, 0, 0, 0.2);
-  border: 3px solid #5c3a1e;
-  z-index: 1;
-  transition: transform 1s ease;
-}
-
-/* Position the left and right curtains */
-.curtain-left {
-  left: 0;
-  transform: translateX(0);
-}
-
-.curtain-right {
-  right: 0;
-  transform: translateX(0);
-}
-
-/* Open the curtains when the 'open' class is added */
-.curtains-container.open .curtain-left {
-  transform: translateX(-100%);
-}
-
-.curtains-container.open .curtain-right {
-  transform: translateX(100%);
-}
 
