--- a/src/App.css
+++ b/src/App.css
@@ -226,6 +226,7 @@
 /* Navbar Action Buttons */
 .navbar-actions {
   display: flex;
+  align-items: center;
   gap: 15px;
 }
 
@@ -387,6 +388,7 @@ th{
     margin: 50px auto;
     background: white;
     border-radius: 12px;
+    padding: 20px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
   }
@@ -736,7 +738,7 @@ th{
   border-collapse: collapse;
   background-color: #f4f4f4;
   overflow-y: auto;
-
+  
 }
 
 .dynamic-table th, .dynamic-table td {
@@ -750,6 +752,7 @@ tr:hover{
   background-color: #004A89	;
   color: white	;
   text-align: center;
+  
 
 }
 
@@ -761,6 +764,7 @@ tr:hover{
   text-align: center;
   overflow-y: scroll;
   padding: 3px;
+  
 }
 
 .dragged {
@@ -1343,8 +1347,8 @@ button:hover {
 }
 .white-box{
   background-color: #FFFFFF;
-  width: 100%;
-  height: 100%;
+  width: 99%;
+  height: 98%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   padding: 10px 20px;
   overflow-y: auto;
